
find_package(Portaudio REQUIRED)
#target_link_libraries(remixxx_test remixxx)

#target_link_libraries(remixxx_test Qt5::Widgets Qt5::Quick Qt5::Gui Qt5::Core)
#target_link_libraries(remixxx_test "${AVCODEC_LIBRARIES}" "${AVFORMAT_LIBRARIES}" "${AVUTIL_LIBRARIES}" "${SWRESAMPLE_LIBRARIES}" "${RUBBERBAND_LIBRARIES}" "${PORTAUDIO_LIBRARIES}")
